--- a/src/xpcc/architecture/platform/driver/dma/stm32/dma_base.hpp.in
+++ b/src/xpcc/architecture/platform/driver/dma/stm32/dma_base.hpp.in
@@ -16,7 +16,7 @@
 
 %% if target is stm32f4
 	%% set reg_prefix = "DMA_SxCR"
-%% elif target is stm32f3
+%% elif target is stm32f3 or target is stm32f0
 	%% set reg_prefix = "DMA_CCR"
 %% endif
 
@@ -140,7 +140,7 @@ public:
 		MemoryToPeripheral 	= DMA_SxCR_DIR_0,
 		/// Source: DMA_SxPAR; Sink: DMA_SxM0AR
 		MemoryToMemory 		= DMA_SxCR_DIR_1,
-%% elif target is stm32f3
+%% elif target is stm32f3 or target is stm32f0
 		/// Source: DMA_CPARx; Sink: DMA_CMARx
 		PeripheralToMemory 	= 0,
 		/// Source: DMA_CMARx; Sink: DMA_CPARx
@@ -167,7 +167,7 @@ protected:
 			DMA_SxCR_PL_1    | DMA_SxCR_PL_0    |						// Priority
 			DMA_SxCR_CIRC    |											// CircularMode
 			DMA_SxCR_PFCTRL;											// FlowControl
-%% elif target is stm32f3
+%% elif target is stm32f3 or target is stm32f0
 	static constexpr uint32_t memoryMask =
 			DMA_CCR_MSIZE_0  | DMA_CCR_MSIZE_1  |	// MemoryDataSize
 			DMA_CCR_MINC                        |	// MemoryIncrementMode
