--- a/src/xpcc/architecture/platform/driver/dma/stm32/dma.hpp.in
+++ b/src/xpcc/architecture/platform/driver/dma/stm32/dma.hpp.in
@@ -21,7 +21,7 @@
 
 %% if target is stm32f4
 	%% set streams = range(0,8)
-%% elif target is stm32f3 or target is stm32f0
+%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 	%% if id == 1
 		%% set streams = range(1,7)
 	%% elif id == 2
@@ -66,7 +66,7 @@ public:
 			MemoryIncrementMode inc = MemoryIncrementMode::Increment
 		%% if target is stm32f4
 			, MemoryBurstTransfer transfer = MemoryBurstTransfer::Single);
-		%% elif target is stm32f3 or target is stm32f0
+		%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 			);
 		%% endif
 
@@ -76,7 +76,7 @@ public:
 			PeripheralIncrementMode inc = PeripheralIncrementMode::Fixed
 		%% if target is stm32f4
 			, PeripheralBurstTransfer transfer = PeripheralBurstTransfer::Single);
-		%% elif target is stm32f3 or target is stm32f0
+		%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 			);
 		%% endif
 	%% endfor
@@ -88,7 +88,7 @@ public:
 			MemoryIncrementMode inc = MemoryIncrementMode::Increment
 		%% if target is stm32f4
 			, MemoryBurstTransfer transfer = MemoryBurstTransfer::Single);
-		%% elif target is stm32f3 or target is stm32f0
+		%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 			);
 		%% endif
 
@@ -98,7 +98,7 @@ public:
 			PeripheralIncrementMode inc = PeripheralIncrementMode::Fixed
 		%% if target is stm32f4
 			, PeripheralBurstTransfer transfer = PeripheralBurstTransfer::Single);
-		%% elif target is stm32f3 or target is stm32f0
+		%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 			);
 		%% endif
 	%% endfor
@@ -117,7 +117,7 @@ public:
 			CircularMode circular = CircularMode::Disabled
 		%% if target is stm32f4
 			, FlowControl flow = FlowControl::Dma);
-		%% elif target is stm32f3 or target is stm32f0
+		%% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 			);
 		%% endif
 
