--- a/src/xpcc/architecture/platform/driver/dma/stm32/dma_impl.hpp.in
+++ b/src/xpcc/architecture/platform/driver/dma/stm32/dma_impl.hpp.in
@@ -11,7 +11,7 @@
 #	error 	"Don't include this file directly, use 'dma_{{ id }}.hpp' instead!"
 #endif
 
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	%% set streams = range(0,8)
 %% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 	%% if id == 1
@@ -24,7 +24,7 @@
 void
 xpcc::stm32::Dma{{ id }}::enable()
 {
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	RCC->AHB1ENR  |= RCC_AHB1ENR_DMA{{ id }}EN;
 	RCC->AHB1RSTR |=  RCC_AHB1RSTR_DMA{{ id }}RST;
 	RCC->AHB1RSTR &= ~RCC_AHB1RSTR_DMA{{ id }}RST;
@@ -36,7 +36,7 @@ xpcc::stm32::Dma{{ id }}::enable()
 void
 xpcc::stm32::Dma{{ id }}::disable()
 {
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	RCC->AHB1ENR &= ~RCC_AHB1ENR_DMA{{ id }}EN;
 %% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 	RCC->AHBENR &= ~RCC_AHBENR_DMA{{ id }}EN;
@@ -47,7 +47,7 @@ xpcc::stm32::Dma{{ id }}::disable()
 
 %% for stream_id in streams
 
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	%% set stream = "DMA" ~ id ~ "_Stream" ~ stream_id
 	%% set reg = stream ~ "->CR"
 	%% set mem = stream ~ "->M0AR"
@@ -68,7 +68,7 @@ xpcc::stm32::Dma{{ id }}::disable()
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemorySource(uint{{type}}_t* address,
 	MemoryIncrementMode inc
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 , MemoryBurstTransfer transfer)
 %% else
 )
@@ -90,7 +90,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemorySource(uint{{type}}_t*
 	}
 	{{ reg }} = ({{ reg }} & ~memoryMask) | static_cast<uint32_t>(size)
 		| static_cast<uint32_t>(inc)      | static_cast<uint32_t>(dir)
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		| static_cast<uint32_t>(transfer);
 %% else
 		;
@@ -100,7 +100,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemorySource(uint{{type}}_t*
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralSource(uint{{type}}_t* address,
 	PeripheralIncrementMode inc
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 , PeripheralBurstTransfer transfer)
 %% else
 )
@@ -112,7 +112,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralSource(uint{{type}
 	{{ per }} = reinterpret_cast<uint32_t>(address);
 	{{ reg }} = ({{ reg }} & ~peripheralMask) | static_cast<uint32_t>(size)
 		| static_cast<uint32_t>(inc)          | static_cast<uint32_t>(dir)
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		| static_cast<uint32_t>(transfer);
 %% else
 		;
@@ -125,7 +125,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralSource(uint{{type}
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemoryDestination(uint{{type}}_t* address,
 	MemoryIncrementMode inc
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 , MemoryBurstTransfer transfer)
 %% else
 )
@@ -146,7 +146,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemoryDestination(uint{{type
 	}
 	{{ reg }} = ({{ reg }} & ~memoryMask) | static_cast<uint32_t>(size)
 		| static_cast<uint32_t>(inc)      | static_cast<uint32_t>(dir)
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		| static_cast<uint32_t>(transfer);
 %% else
 		;
@@ -157,7 +157,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setMemoryDestination(uint{{type
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralDestination(uint{{type}}_t* address,
 	PeripheralIncrementMode inc
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 , PeripheralBurstTransfer transfer)
 %% else
 )
@@ -176,7 +176,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralDestination(uint{{
 	{{ per }} = reinterpret_cast<uint32_t>(address);
 	{{ reg }} = ({{ reg }} & ~peripheralMask) | static_cast<uint32_t>(size)
 		| static_cast<uint32_t>(inc)          | static_cast<uint32_t>(dir)
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		| static_cast<uint32_t>(transfer);
 %% else
 		;
@@ -187,7 +187,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::setPeripheralDestination(uint{{
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::stop()
 {
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	{{ reg }} &= ~DMA_SxCR_EN;
 	while({{ reg }} & DMA_SxCR_EN); // wait for stream to be stopped
 %% else
@@ -198,11 +198,11 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::stop()
 
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::configure(
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	Channel channel,
 %% endif
 	uint16_t sample_length, Priority priority, CircularMode circular
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	, FlowControl flow)
 %% elif target is stm32f0 or target is stm32f1 or target is stm32f3
 	)
@@ -211,7 +211,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::configure(
 	//stop();
 	{{ reg }} = ({{ reg }} & ~configmask) | static_cast<uint32_t>(priority)
 										  | static_cast<uint32_t>(circular)
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		| static_cast<uint32_t>(channel) | static_cast<uint32_t>(flow);
 %% else
 		;
@@ -222,7 +222,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::configure(
 void
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::start()
 {
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	{{ reg }} |= DMA_SxCR_EN;
 %% else
 	// clear interrupt flags
@@ -237,7 +237,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::start()
 bool
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::isFinished()
 {
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 	return !({{ reg }} & DMA_SxCR_EN);
 %% else
 	return (DMA{{ id }}->ISR & DMA_ISR_TCIF{{ stream_id }});
@@ -248,7 +248,7 @@ xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::DataTransferDirection
 xpcc::stm32::Dma{{ id }}::Stream{{ stream_id }}::getDataTransferDirection()
 {
 	return static_cast<DataTransferDirection>(
-%% if target is stm32f4
+%% if target is stm32f4 or target is stm32f7
 		{{ reg }} & (DMA_SxCR_DIR_0 | DMA_SxCR_DIR_1));
 %% else
 		{{ reg }} & (DMA_CCR_MEM2MEM | DMA_CCR_DIR));
