[driver] stm32/uart: add setDmaMode(DmaMode) method to UartHal class

--- a/src/xpcc/architecture/platform/driver/uart/stm32/uart_base.hpp.in
+++ b/src/xpcc/architecture/platform/driver/uart/stm32/uart_base.hpp.in
@@ -122,6 +122,16 @@ public:
 		Enabled  = USART_CR2_CLKEN,
 	};
 
+	enum class
+	DmaMode : uint32_t
+	{
+		Disabled 		= 0,
+		Receive 		= USART_CR3_DMAR,
+		Transmit	 	= USART_CR3_DMAT,
+		Bidirectional 	= USART_CR3_DMAR | USART_CR3_DMAT,
+		All				= Bidirectional,
+	};
+
 };
 
 /// @cond
